--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-	<title>Apenas um CRUD de Usuário setembro de 2021</title>
+	<title>API REST - por Felipe</title>
 	<style>
 		html {
 			margin-right: 20%;
@@ -19,187 +19,18 @@
 <body>
 	<h3>Spring boot com bootstrap</h3>
 
-	<div class="container">
-		<form action="" id="formCadastroUser">
-			<div class="mb-3">
-				<label for="id" class="form-label">ID</label>
-				<input type="text" class="form-control" id="id" readonly="readonly">
-			</div>
-			<div class="mb-3">
-				<label for="nome" class="form-label">Nome</label>
-				<input type="text" class="form-control" id="nome" placeholder="informe o nome">
-			</div>
-			<div class="mb-3">
-				<label for="email" class="form-label">Email</label>
-				<input type="email" class="form-control" id="email" placeholder="name@example.com">
-			</div>
-
-			<div class="mb-3">
-				<label for="dataNasc" class="form-label">Data de nascimento</label>
-				<input type="date" class="form-control" id="dataNasc" placeholder="dd/MM/yyyy">
-			</div>
-		</form>
-		<button type="button" class="btn btn-secondary"
-			onClick="document.getElementById('formCadastroUser').reset()">📄 Novo</button>
-		<button type="button" class="btn btn-primary" onClick="salvarUsuario()">💾 Salvar</button>
-		<button type="button" class="btn btn-danger" onclick="botaoDeletarDaTela();">⚠Deletar</button>
-		<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#pesquisarModal">🔎
-			Pesquisar</button>
-	</div>
+	<!--
+		
+		criar uma página de perfil de usuário
+		criar opção de login e página que pede e-mail e senha
+		criar opção senha para o usuário
+		no perfil do usuário criar opção cadastrar conta
+		proibir mais de um usuario com mesmo e-mail, caso haja, dar opção esqueci a minha senha
+		criar funcionalidade de reativação de senha
+		-->
 
 
-
-
-	<!-- MODAL DE PESQUISAR USUÁRIO -->
-	<div class="modal fade" id="pesquisarModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">Pesquisar usuário</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<form>
-						<div class="mb-3">
-							<label for="pesquisarNome" class="col-form-label">Nome do usuário</label>
-							<input type="text" class="form-control" id="pesquisarNome">
-						</div>
-						<button type="button" class="btn btn-primary" onCLick="pesquisarUsuario()">🔎 Pesquisar</button>
-					</form>
-					<div style="height: 300px;overflow: scroll;">
-						<table class="table table-striped" id="tabelaResultadoUsuarios">
-							<thead>
-								<tr>
-									<th scope="col">ID</th>
-									<th scope="col">NOME</th>
-									<th scope="col">E-MAIL</th>
-									<th scope="col">NASCIMENTO</th>
-									<th scope="col">ABRIR</th>
-									<th scope="col">EXCLUIR</th>
-								</tr>
-							</thead>
-							<tbody>
-
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">fechar</button>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- fim do MODAL DE PESQUISAR USUÁRIO -->
-
-	<script type="text/javascript">
-		function salvarUsuario() {
-			var id = $("#id").val();
-			var nome = $("#nome").val();
-			var email = $("#email").val();
-			var dtNascimento = $("#dataNasc").val();
-			
-			if (nome == null || nome != null && nome.trim() == '') {
-				alert("Informe o nome");
-				return;
-			}
-			if (email == null || email != null && email.trim() == '') {
-				alert("Informe o e-mail");
-				return;
-			}
-
-			$.ajax({
-				method: "POST",
-				url: "salvar",
-				data: JSON.stringify({
-					id: id,
-					nome: nome,
-					email: email,
-					dtNascimento: dtNascimento
-				}),
-				contentType: "application/json; charset=utf-8",
-				success: function (response) {
-					$("#id").val(response.id);
-					alert("gravou com sucesso!");
-				}
-			}).fail(function (xhr, status, errorThrown) {
-				alert("Erro ao salvar usuario: " + xhr.responseText);
-			});
-		}
-	</script>
-	<script>
-		function botaoDeletarDaTela() {
-			var id = $('#id').val();
-
-			if (id != null && id.trim() != '') {
-				deleteUser(id);
-				document.getElementById('formCadastroUser').reset();
-			}
-
-		}
-
-		function pesquisarUsuario() {
-			var nome = $("#pesquisarNome").val();
-			if (nome != null && nome.trim() != '') {
-				$.ajax({
-					method: "GET",
-					url: "buscarPorNome",
-					data: "name=" + nome,
-					success: function (response) {
-						$('#tabelaResultadoUsuarios > tbody > tr').remove();
-						for (var i = 0; i < response.length; i++) {
-							$('#tabelaResultadoUsuarios > tbody').append('<tr id="' + response[i].id + '"><td>' + response[i].id + '</td><td>' + response[i].nome + '</td><td>' + response[i].email + '</td><td>' + response[i].dtNascimento + '</td><td><button type="button" onclick="colocarEmEdicao(' + response[i].id + ')" class="btn btn-primary">Ver</button></td><td><button type="button" class="btn btn-danger" onclick="deleteUser(' + response[i].id + ')">Delete</button></td></tr>');
-
-						}
-					}
-				}).fail(function (xhr, status, errorThrown) {
-					alert("Erro ao buscar usuario: " + xhr.responseText);
-				});
-			}
-
-		}
-		function deleteUser(id) {
-
-			if (confirm('Deseja realmente deletar?')) {
-
-				$.ajax({
-					method: "DELETE",
-					url: "deletar",
-					data: "id=" + id,
-					success: function (response) {
-
-						$('#' + id).remove();
-
-						alert(response);
-					}
-				}).fail(function (xhr, status, errorThrown) {
-					alert("Erro ao deletar usuario por id: " + xhr.responseText);
-				});
-
-			}
-
-		}
-		function colocarEmEdicao(id) {
-
-			$.ajax({
-				method: "GET",
-				url: "buscaruserid",
-				data: "iduser=" + id,
-				success: function (response) {
-
-					$("#id").val(response.id);
-					$("#nome").val(response.nome);
-					$("#email").val(response.email);
-					$("#dtNascimento").val(response.dtNascimento);
-					$('#pesquisarModal').modal('hide');
-				}
-			}).fail(function (xhr, status, errorThrown) {
-				alert("Erro ao buscar usuario por id: " + xhr.responseText);
-			});
-
-
-		}
-	</script>
+	<a href="cad_usuario.html">CADASTRE-SE</a>
 
 	<!-- Option 1: Bootstrap Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
