gambiarra sobre a senha

--- a/src/main/resources/static/cad_usuario.html
+++ b/src/main/resources/static/cad_usuario.html
@@ -130,7 +130,8 @@
 					id: id,
 					nome: nome,
 					email: email,
-					dtNascimento: dtNascimento
+					dtNascimento: dtNascimento,
+					password: "123"
 				}),
 				contentType: "application/json; charset=utf-8",
 				success: function (response) {
